--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mern-shopping-list",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.15.1"
+  },
   "description": "Shopping list built with mern stack",
   "main": "server.js",
   "scripts": {
